@@ -24,7 +24,6 @@ include scripts/findks.cgi
 include scripts/nopxe.cgi
 include scripts/gateway.py
 include scripts/post_install_trigger.cgi
-include scripts/cobbler_auth_help
 include snippets/*
 recursive-include po *.pot
 recursive-include po *.po
