@@ -38,6 +38,7 @@ install: clean manpage
 devinstall:
 	cp /var/lib/cobbler/settings /tmp/cobbler_settings
 	cp /etc/cobbler/modules.conf /tmp/cobbler_modules.conf
+	cp /etc/httpd/conf.d/cobbler.conf /tmp/cobbler_http.conf
 	cp /etc/cobbler/users.conf /tmp/cobbler_users.conf
 	-cp /etc/cobbler/users.digest /tmp/cobbler_users.digest
 	make install
@@ -45,6 +46,7 @@ devinstall:
 	cp /tmp/cobbler_modules.conf /etc/cobbler/modules.conf
 	cp /tmp/cobbler_users.conf /etc/cobbler/users.conf
 	-cp /tmp/cobbler_users.digest /etc/cobbler/users.digest
+	cp /tmp/cobbler_http.conf /etc/httpd/conf.d/cobbler.conf
 	find /var/lib/cobbler/triggers | xargs chmod +x
 	chown -R apache /var/www/cobbler 
 	chown -R apache /var/www/cgi-bin/cobbler	
